Documentation added for api-docs
